tests/e2e/semantics/foreach_invalid6.error
Error: syntax error in story at line 6, column 2

6|      c = k
        ^

E0100: Can't assign `any` to `int`
